# openstack-ansible-os_ironic

./: .gitreview  CONTRIBUTING.rst  README.rst  bindep.txt  local_install.sh  run_tests.sh  setup.cfg  test-requirements.txt  tox.ini
defaults/: main.yml
examples/: playbook.yml
files/: tftpd-hpa
handlers/: main.yml
meta/: main.yml
tasks/: db_setup.yml  ironic_api_install.yml  ironic_api_post_install.yml  ironic_conductor_install.yml  ironic_conductor_post_install.yml  ironic_conductor_pre_install.yml  ironic_db_setup.yml  ironic_deploy_image.yml  ironic_get_neutron_uuids.yml  ironic_get_source.yml  ironic_init.yml  ironic_init_common.yml  ironic_init_systemd.yml  ironic_init_upstart.yml  ironic_inspector_apparmor.yml  ironic_inspector_post_install.yml  ironic_inspector_pre_install.yml  ironic_install.yml  ironic_install_apt.yml  ironic_messaging_setup.yml  ironic_oneview_setup.yml  ironic_post_install.yml  ironic_pre_install.yml  ironic_service_add.yml  ironic_service_setup.yml  ironic_upstart_common_init.yml  ironic_upstart_init.yml  ironic_uwsgi.yml  main.yml  mq_setup.yml  python_ironicclient_install.yml  service_setup.yml
templates/: dhcpd.conf.j2  dnsmasq.conf.j2  inspector.conf.j2  inspector.ipxe.j2  ironic-httpd.conf.j2  ironic-ipxe.conf.j2  ironic-oneviewd.conf.j2  ironic-ports.conf.j2  ironic-systemd-init.j2  ironic-systemd-tempfiles.j2  ironic-systemd-tmpfiles.j2  ironic-upstart-init.j2  ironic-uwsgi.ini.j2  ironic-wsgi.py.j2  ironic.conf.j2  map-file  nginx-nodefault.conf.j2  pxelinux-default.j2  rootwrap.conf.j2  sudoers.j2  tftpd-hpa.j2
(+42 files in other folders)
